# s3_gateway

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.yml  server.py  vcpkg.json
include/: config.h  file_registry.h  metrics.h  s3_client.h  server.h
src/: config.cc  file_registry.cc  main.cc  metrics.cc  s3_client.cc  server.cc
